--- a/about.html
+++ b/about.html
@@ -140,6 +140,36 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-12 col-lg-4 col-md-12 col-sm-12 mb-2">
+                    <div class="card">
+                        <img class="card-img-top" src="./images/11.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Allia when 3 months Older</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height
+                                action.</p>
+                        </div>
+                        <div class="card-footer">
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4 col-md-12 col-sm-12 mb-2">
+                    <div class="card">
+                        <img class="card-img-top" src="./images/12.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Allia when 3 months Older</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height
+                                action.</p>
+                        </div>
+                        <div class="card-footer">
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </div>
