--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./static/fontawesome-free-5.15.1-web/css/all.css">
     <link rel="stylesheet" href="./about.css">
 
-    <title>Allia's Website</title>
+    <title>Allia's Website | ♥♥♥</title>
 </head>
 
 <body>
