--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="./index.css">
 
-    <title>Allia's Website</title>
+    <title>Allia's Website | ♥♥♥</title>
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 </head>
 
