--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="./about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Reach Us</a>
+                    <a class="nav-link" href="./reach.html">Reach Us</a>
                 </li>
             </ul>
         </div>
@@ -193,7 +193,7 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Upload a picture to add</h5>
+                        <h5 class="modal-title" id="exampleModalLabel">Upload a picture of Allia ❤️</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
