--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="./about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./reach.html">Reach Us</a>
+                    <a class="nav-link" href="./reachUs.html">Reach Us</a>
                 </li>
             </ul>
         </div>
