--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="./about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./reach.html">Reach Us</a>
+                    <a class="nav-link" href="./reachUs.html">Reach Us</a>
                 </li>
             </ul>
         </div>
