--- a/reach.html
+++ b/reach.html
@@ -36,7 +36,7 @@
             </ul>
         </div>
     </nav>
-    <main class="container-fluid">
+    <main class="container-fluid vh-100">
         <section class="col-12">
             <div class="row justify-content-center mt-4">
                 <div class="card border-info mb-3 mt-3" style="max-width: 18rem;">
@@ -92,10 +92,8 @@
                     </form>
                 </div>
             </div>
-
         </section>
     </main>
-
 </body>
 
 </html>
