--- a/reachUs.html
+++ b/reachUs.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="./static/fontawesome-free-5.15.1-web/css/all.css">
     <link rel="stylesheet" href="./reach.css">
 
     <title>Allia's Website</title>
@@ -113,7 +114,14 @@
     </main>
     <footer class="footer bg-light container-fluid text-center">
         <div class="footer-container">
-            <span class="text-muted">Graven Niel M. Corias | 2020</span>
+            <div class="row justify-content-center align-items-center">
+                <span class="text-muted mr-2">Graven Niel M. Corias | 2020</span>
+                <a class="btn btn-fb mr-1" href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-twitter mr-1" href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+                <a class="btn btn-instagram mr-1" href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-youtube mr-1" href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
+                <a class="btn btn-github mr-1" href="https://github.com/"><i class="fab fa-github"></i></a>
+            </div>
         </div>
     </footer>
     <!-- Optional JavaScript -->
