--- a/about.html
+++ b/about.html
@@ -186,7 +186,7 @@
         <div class="floating-button d-flex justify-content-end fixed-bottom">
             <button type="button" class="btn btn-outline-info p-sm-10" data-toggle="modal"
                 data-target="#uploadPicture"><i class="fas fa-plus"></i>
-                PICTURE</button>
+                PHOTO</button>
         </div>
         <div class="modal fade" id="uploadPicture" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
