--- a/index.html
+++ b/index.html
@@ -41,9 +41,15 @@
             <div class="row justify-content-center align-items-center">
                 <div class="col-lg-3 col-md-8 col-sm-12">
                     <form class="main-form" action="">
-                        <h1 class="form-badge text-center"><span
+                        <div class="btn-toolbar mb-3 justify-content-center">
+                            <div class="btn-group">
+                                <span class="badge badge-secondary justify-content-center mr-2">Allia's</span>
+                                <h1 class="form-badge text-center align-self-center pt-2"> Corner</h1>
+                            </div>
+                        </div>
+                        <!-- <h1 class="form-badge text-center"><span
                                 class="badge badge-secondary justify-content-center">Allia's</span> Corner
-                        </h1>
+                        </h1> -->
                         <div class="form-group mt-4">
                             <label for="exampleInputEmail1">Email address</label>
                             <input type="email" class="form-control" id="exampleInputEmail1"
