--- a/reachUs.html
+++ b/reachUs.html
@@ -41,7 +41,7 @@
         <section class="col-9 justify-content-center mx-auto">
             <div class="row mt-4">
                 <div class="col-12 col-lg-3 col- col-md-12 col-sm-12 mb-2">
-                    <div class="card border-info">
+                    <div class="card border-info shadow">
                         <div class="card-body text-info">
                             <h5 class="card-title">Azelene Williams</h5>
                             <p class="card-text">“The children we bring into the world are small replicas of ourselves
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-3 col- col-md-12 col-sm-12 mb-2">
-                    <div class="card border-secondary">
+                    <div class="card border-secondary shadow">
                         <div class="card-body text-secondary">
                             <h5 class="card-title">Ann Rinaldi</h5>
                             <p class="card-text">“I know now why God gave us babies. They require constant attention, of
@@ -65,7 +65,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-3 col- col-md-12 col-sm-12 mb-2">
-                    <div class="card border-warning">
+                    <div class="card border-warning shadow">
                         <div class="card-body text-warning">
                             <h5 class="card-title">Liezi</h5>
                             <p class="card-text">“In infancy, our blood is strong and our energy is plentiful. Mind and
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-3 col- col-md-12 col-sm-12 mb-2">
-                    <div class="card border-danger">
+                    <div class="card border-danger shadow">
                         <div class="card-body text-danger">
                             <h5 class="card-title">Peggy O’Mara</h5>
                             <p class="card-text">“Don’t stand unmoving outside the door of a crying baby whose only
