--- a/about.html
+++ b/about.html
@@ -27,7 +27,10 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="./index.html">Home</a>
+                    <a class="nav-link" href="./index.html">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./home.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./about.html">About</a>
