--- a/reachUs.html
+++ b/reachUs.html
@@ -26,7 +26,10 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="./index.html">Home</a>
+                    <a class="nav-link" href="./index.html">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./home.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./about.html">About</a>
@@ -115,7 +118,6 @@
     <footer class="footer bg-light container-fluid text-center">
         <div class="footer-container">
             <div class="row justify-content-center align-items-center">
-                <span class="text-muted mr-2">Graven Niel M. Corias | 2020</span>
                 <a class="btn btn-fb mr-1" href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
                 <a class="btn btn-twitter mr-1" href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
                 <a class="btn btn-instagram mr-1" href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
