image border radius

--- a/home.html
+++ b/home.html
@@ -112,8 +112,10 @@
                         height="140">
                     <h3 class="mt-2">Allia Mione Grae D. Corias</h3>
                     <h6><span class="text-muted font-italic">Daughter ♥ </span></h6>
-                    <p>A parents' love is whole no matter how many times divided. <span
-                            class="font-weight-bold text-info">I love you Mom and Dad! </span>♥</p>
+                    <p>A parents' love is whole no matter how many times divided. I want to thank you for always
+                        understanding the things I said, the things I didn’t say, and the things I never planned on
+                        telling you. Thank you for understanding me always <span class="font-weight-bold text-info">I
+                            love you Mom and Dad! </span>♥</p>
                     </p>
                 </div><!-- /.col-lg-4 -->
                 <div class="col-lg-4">
