--- a/home.html
+++ b/home.html
@@ -106,7 +106,7 @@
                         be here for the rest of your life but I can promise to love you for the rest of <span
                             class="font-weight-bold text-info">MINE</span>.
                     </p>
-                </div><!-- /.col-lg-4 -->
+                </div>
                 <div class="col-lg-4">
                     <img class="rounded-circle" src="./images/14.jpg" alt="Generic placeholder image" width="140"
                         height="140">
@@ -117,7 +117,7 @@
                         telling you. Thank you for understanding me always <span class="font-weight-bold text-info">I
                             love you Mom and Dad! </span>♥</p>
                     </p>
-                </div><!-- /.col-lg-4 -->
+                </div>
                 <div class="col-lg-4">
                     <img class="rounded-circle" src="./images/4.jpg" alt="Generic placeholder image" width="140"
                         height="140">
@@ -128,8 +128,8 @@
                             class="font-weight-bold text-info">GOOD</span> times. Learn from everything you can. Be the
                         woman I know you can be. I am proud of many things in life but nothing beats being a mother to
                         Allia.</p>
-                </div><!-- /.col-lg-4 -->
-            </div><!-- /.row -->
+                </div>
+            </div>
 
             <!-- START THE FEATURETTES -->
 
