minor changes on the styles css

--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-        <a class="navbar-brand border border-info px-2 py-1 rounded" href="#">Allia Mion Grae</a>
+        <a class="navbar-brand border border-info px-2 py-1 rounded" href="#">Allia Mione Grae</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -53,7 +53,7 @@
                         <div class="carousel-caption text-left">
                             <h1>Family Picture</h1>
                             <p>A picture of family to keep us reminded of our roots.</p>
-                            <p><a class="btn btn-lg btn-primary" href="index.html" role="button">Sign up</a></p>
+                            <p><a class="btn btn-lg btn-info" href="index.html" role="button">Sign up</a></p>
                         </div>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                         <div class="carousel-caption">
                             <h1>Night background</h1>
                             <p>View of a starry night.</p>
-                            <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+                            <p><a class="btn btn-lg btn-info" href="#" role="button">Learn more</a></p>
                         </div>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                         <div class="carousel-caption text-right">
                             <h1>Be proud of what you already have</h1>
                             <p>Treasure them, for everything is not permanent.</p>
-                            <p><a class="btn btn-lg btn-primary" href="about.html" role="button">Browse gallery</a></p>
+                            <p><a class="btn btn-lg btn-info" href="about.html" role="button">Browse gallery</a></p>
                         </div>
                     </div>
                 </div>
@@ -99,35 +99,43 @@
                     <img class="rounded-circle" src="./images/13.jpg" alt="Generic placeholder image" width="140"
                         height="140">
                     <h3 class="mt-2">Graven Niel M. Corias</h3>
-                    <h6><span class="text-muted font-italic">Dad ♥ </span></h6>
+                    <h6><span class="text-muted font-italic">Father ♥</span></h6>
                     <p>To my daughter, I want you to believe deep in your heart that you are capable of achieving
                         anything you put your mind to, that you will <span class="font-weight-bold text-info">NEVER
                             LOSE</span> you either win or learn, just go forth and aim for the skies. I can't promise to
                         be here for the rest of your life but I can promise to love you for the rest of <span
                             class="font-weight-bold text-info">MINE</span>.
                     </p>
+                    <div class="">
+                        <a class="btn btn-md btn-info" href="">Info &raquo;</a>
+                    </div>
                 </div>
                 <div class="col-lg-4">
                     <img class="rounded-circle" src="./images/14.jpg" alt="Generic placeholder image" width="140"
                         height="140">
                     <h3 class="mt-2">Allia Mione Grae D. Corias</h3>
-                    <h6><span class="text-muted font-italic">Daughter ♥ </span></h6>
+                    <h6><span class="text-muted font-italic">Daughter ♥</span></h6>
                     <p>A parents' love is whole no matter how many times divided. I want to thank you for always
                         understanding the things I said, the things I didn’t say, and the things I never planned on
                         telling you. Thank you for understanding me always <span class="font-weight-bold text-info">I
                             love you Mom and Dad! </span>♥</p>
-                    </p>
+                    <div class="abutton">
+                        <a class="btn btn-md btn-info" href="">Info &raquo;</a>
+                    </div>
                 </div>
                 <div class="col-lg-4">
                     <img class="rounded-circle" src="./images/4.jpg" alt="Generic placeholder image" width="140"
                         height="140">
                     <h3 class="mt-2">Louis Loren M. Deguiñon</h3>
-                    <h6><span class="text-muted font-italic">Mother ♥ </span></h6>
+                    <h6><span class="text-muted font-italic">Mother ♥</span></h6>
                     <p>To my daughter, never forget that I love you. Life is filled with <span
                             class="font-weight-bold text-info">HARD</span> times and <span
                             class="font-weight-bold text-info">GOOD</span> times. Learn from everything you can. Be the
                         woman I know you can be. I am proud of many things in life but nothing beats being a mother to
                         Allia.</p>
+                    <div class="lbutton">
+                        <a class="btn btn-md btn-info" href="">Info &raquo;</a>
+                    </div>
                 </div>
             </div>
 
@@ -174,7 +182,7 @@
                     <h2 class="featurette-heading mb-4">And lastly, always check this site for updates. <span
                             class="text-muted">There will be new photos.</span></h2>
                     <p class="lead">Wait for more pictures to come. Some love ones will surely upload their memorable
-                        times with our daughter. Just be sure to upload yours and stay in touch with us! Have a nic day
+                        times with our daughter. Just be sure to upload yours and stay in touch with us! Have a nice day
                         ♥♥♥.</p>
                 </div>
                 <div class="col-md-5">
@@ -191,8 +199,9 @@
 
         <!-- FOOTER -->
         <footer class="container">
-            <p class="float-right"><a href="#">Back to top</a></p>
-            <p>&copy; Graven Niel M. Corias | 2020 &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+            <p class="float-right"><a href="#" class="text-info">Back to top</a></p>
+            <p>&copy; Graven Niel M. Corias | 2020 &middot; <a href="#" class="text-info">Privacy</a> &middot; <a
+                    href="#" class="text-info">Terms</a></p>
         </footer>
     </main>
     <script>
