--- a/reachUs.html
+++ b/reachUs.html
@@ -115,7 +115,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer bg-light container-fluid text-center">
+    <footer class="footer bg-light container text-center">
         <div class="footer-container">
             <div class="row justify-content-center align-items-center">
                 <a class="btn btn-fb mr-2" href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
