--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
                                 <div class="invalid-feedback">Check this checkbox to continue.</div>
                             </label>
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" id="btnSubmit"
+                            class="btn btn-outline-secondary btn-block mt-3">Submit</button>
                     </form>
                 </div>
             </div>
