--- a/about.html
+++ b/about.html
@@ -202,7 +202,7 @@
                         </button>
                     </div>
                     <div class="modal-body d-flex justify-content-center">
-                        <button class="btn btn-info"><i class="fas fa-plus"></i> ADD PICTURE</button>
+                        <!-- <button class="btn btn-info"><i class="fas fa-plus"></i> ADD PICTURE</button> -->
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
