--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./static/fontawesome-free-5.15.1-web/css/all.css">
     <link rel="stylesheet" href="./about.css">
 
-    <title>Allia's Website is cute</title>
+    <title>Allia's Website</title>
 </head>
 
 <body>
@@ -53,7 +53,7 @@
                         </div>
                         <div class="card-footer">
                             <p class="card-text"><small class="text-muted">Posted by: <cite title="Source Title">Poppa
-                                        Niel ♥</cite></small></p>
+                                        Niel Armstrong ♥</cite></small></p>
                         </div>
                     </div>
                 </div>
