--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                         </div>
                         <div class="card-footer">
                             <p class="card-text"><small class="text-muted">Posted by: <cite title="Source Title">Poppa
-                                        Niel Armstrong ♥</cite></small></p>
+                                        Niel ♥</cite></small></p>
                         </div>
                     </div>
                 </div>
