--- a/home.html
+++ b/home.html
@@ -132,7 +132,7 @@
                             class="font-weight-bold text-info">HARD</span> times and <span
                             class="font-weight-bold text-info">GOOD</span> times. Learn from everything you can. Be the
                         woman I know you can be. I am proud of many things in life but nothing beats being a mother to
-                        Allia.</p>
+                        you.</p>
                     <div class="lbutton">
                         <a class="btn btn-md btn-info" href="">Info &raquo;</a>
                     </div>
@@ -149,7 +149,8 @@
                             class="text-muted">A
                             memorable moment worth taking.</span></h2>
                     <p class="lead">Take a picture of you and Allia, or choose a picture taken with her and post it on
-                        this website for safe keeping. They will be put in one place and have a look at them whenever
+                        this website for safe keeping. The pictures will be kept in one place and have a look at them
+                        whenever
                         and wherever you want!</p>
                 </div>
                 <div class="col-md-5">
